@@ -4,7 +4,6 @@ package com.yahoo.jdisc.http;
 import com.yahoo.jdisc.HeaderFields;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -20,7 +19,7 @@ public class CookieHelper {
     public static List<Cookie> decodeSetCookieHeader(HeaderFields headers) {
         List<String> cookies = headers.get(HttpHeaders.Names.SET_COOKIE);
         if (cookies == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<Cookie> ret = new LinkedList<>();
         for (String cookie : cookies) {
