@@ -1,8 +1,7 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.search.grouping.request;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 /**
  * This class represents a now-function in a {@link GroupingExpression}. It evaluates to a long that equals the number
@@ -21,7 +20,7 @@ public class NowFunction extends FunctionNode {
     }
 
     private NowFunction(String label, Integer level) {
-        super("now", label, level, Collections.emptyList());
+        super("now", label, level, List.of());
     }
 
     @Override
