@@ -4,7 +4,6 @@ package com.yahoo.search.query.properties.test;
 import com.yahoo.processing.request.properties.PropertyMap;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 
@@ -22,8 +21,8 @@ public class PropertyMapTestCase {
         map.set("nonclonable", new NonClonableObject());
         map.set("clonableArray", new ClonableObject[]{new ClonableObject()});
         map.set("nonclonableArray", new NonClonableObject[]{new NonClonableObject()});
-        map.set("clonableList", Collections.singletonList(new ClonableObject()));
-        map.set("nonclonableList", Collections.singletonList(new NonClonableObject()));
+        map.set("clonableList", List.of(new ClonableObject()));
+        map.set("nonclonableList", List.of(new NonClonableObject()));
         assertNotNull(map.get("clonable"));
         assertNotNull(map.get("nonclonable"));
 
