@@ -7,7 +7,6 @@ import org.junit.Test;
 
 import java.io.ByteArrayOutputStream;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
@@ -20,17 +19,17 @@ import static org.junit.Assert.assertTrue;
  */
 public class VersionsTestCase {
 
-    private static final List<String> EMPTY = Collections.emptyList();
+    private static final List<String> EMPTY = List.of();
     private static final List<String> ONE_TWO = Arrays.asList("1", "2");
     private static final List<String> ONE_THREE = Arrays.asList("1", "3");
     private static final List<String> TWO_THREE = Arrays.asList("3", "2");
     private static final List<String> ONE_NULL_THREE = Arrays.asList("1", null, "3");
-    private static final List<String> ONE_COMMA_THREE = Collections.singletonList("1, 3");
+    private static final List<String> ONE_COMMA_THREE = List.of("1, 3");
     private static final List<String> ONE_EMPTY_THREE = Arrays.asList("1", "", "3");
-    private static final List<String> TOO_LARGE_NUMBER = Collections.singletonList("1000000000");
+    private static final List<String> TOO_LARGE_NUMBER = List.of("1000000000");
     private static final List<String> THREE_TOO_LARGE_NUMBER = Arrays.asList("3", "1000000000");
     private static final List<String> THREE_COMMA_TOO_LARGE_NUMBER = Arrays.asList("3,1000000000");
-    private static final List<String> GARBAGE = Collections.singletonList("garbage");
+    private static final List<String> GARBAGE = List.of("garbage");
 
     @Test
     public void testEmpty() {
